--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: "Open Sans", Arial, sans-serif;
   line-height: 1.6;
   font-size: 16px;
-  background: #fff;
+  background: rgba(0, 0, 0, 0.04);
   color: #848484;
   font-weight: 300;
   overflow-x: hidden; }
